# soma-analytics

./: .gitignore  Cargo.toml  README.md
crates/soma-api/: Cargo.toml
crates/soma-api/src/: lib.rs
crates/soma-cli/: Cargo.toml
crates/soma-cli/src/: main.rs  model_yaml.rs
crates/soma-sdk/: Cargo.toml
crates/soma-sdk/src/: lib.rs
crates/soma-semantic/: Cargo.toml
crates/soma-semantic/src/: compile.rs  error.rs  lib.rs  model.rs  query.rs  rollup.rs  validate.rs
crates/soma-semantic/tests/: compiler_tests.rs
crates/soma-server/: Cargo.toml
crates/soma-server/src/: main.rs
crates/soma-storage/: Cargo.toml
crates/soma-storage/src/: cache_key.rs  error.rs  lib.rs  store.rs  types.rs
crates/soma-storage/src/pg/: crud.rs  dashboard.rs  dsn.rs  mod.rs  model.rs
crates/soma-storage/tests/: smoke_pg.rs
dashboard/: Cargo.toml  README.md  index.html
dashboard/src/: api.rs  app.rs  main.rs
dashboard/src/pages/: editor.rs  explore.rs  mod.rs  model.rs
dashboard/src/pages/model/: mod.rs  model_diagram.rs
docs/: 01-competitor-analysis.md  02-phase1-spec.md  03-cube-deep-evaluation.md  04-north-star-bi.md
migrations/: migration-order.yaml
migrations/00_setup/: 01_schema.sql
migrations/01_migrated/1/: 20260629_01_enable-pgcrypto.sql  20260629_02_init-analytics-schema.sql  20260629_03_init-dashboards.sql
models/: iam.yaml
sdk/js/: README.md  client.test.mjs  index.js  package.json
