[workspace]
resolver = "2"
members = ["crates/soma-semantic", "crates/soma-storage", "crates/soma-api", "crates/soma-server", "crates/soma-sdk", "crates/soma-cli"]
exclude = ["99_ref", "dashboard", "sdk/js"]

# Keep dev target/ lean. debug = false drops ALL debuginfo (no multi-GB target/);
# strip = true removes symbols too; incremental = false drops the ~1.3 GB cache.
# Prefer `cargo build --release` for real runs. Bump debug locally only if you
# genuinely need a step debugger.
[profile.dev]
debug = false
strip = true
incremental = false
