[package]
name = "soma-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "soma-analytics axum router: auth middleware, Principal extractor, handlers, CORS, embed token."

[dependencies]
soma-infra     = { path = "../../../soma-infra", features = ["web", "crypto"] }
soma-storage   = { path = "../soma-storage" }
soma-semantic  = { path = "../soma-semantic" }
soma-audit-core = { path = "../../../soma-audit/crates/soma-audit-core" }
soma-audit-pg  = { path = "../../../soma-audit/crates/soma-audit-pg" }

axum          = { version = "0.8", features = ["macros"] }
tower-http    = { version = "0.6", features = ["cors", "trace"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4", "serde"] }
tokio         = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait   = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
base64        = "0.22"
sqlx          = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
