[package]
name = "soma-semantic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure semantic-query compiler: model types, query types, SQL codegen. No I/O."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
